--- a/app/views/main/index.html
+++ b/app/views/main/index.html
@@ -3,6 +3,10 @@
 <div class="container">
 	<div class="jumbotron">
 		<h2>CCAC Admin</h2>
+
+		<p>Login or Register with:</p>
+
+		<a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
 	</div>
 </div>
 
