--- a/app/views/content/pages.html
+++ b/app/views/content/pages.html
@@ -1,8 +1,11 @@
 <% include ./layout/header.html %>
 
+
 <div class="container">
-	<div class="jumbotron">
-		<h2>Sorry! Page Not Found!</h2>
+<% include ./sidebar.html %>
+
+	<div class="sidepage">
+		<h2>Pages</h2>
 	</div>
 </div>
 
