--- a/app/views/content/profile.html
+++ b/app/views/content/profile.html
@@ -1,6 +1,10 @@
-<% include ./header.html %>
+<% include ./layout/header.html %>
+
 
 <div class="container">
+<% include ./sidebar.html %>
+
+	<div class="sidepage">
 	<div class="well">
 		<h3 class="text-danger"><span class="fa fa-google-plus"></span> Google</h3>
 
@@ -11,6 +15,7 @@
 			<strong>name</strong>: <%= user.google.name %>
 		</p>		
 	</div>
+	</div>
 </div>
 
-<% include ./footer.html %>
+<% include ./layout/footer.html %>
