--- a/app/views/main/index.html
+++ b/app/views/main/index.html
@@ -1,4 +1,4 @@
-<% include ./header.html %>
+<% include ./layout/header.html %>
 
 <div class="container">
 	<div class="jumbotron">
@@ -10,4 +10,4 @@
 	</div>
 </div>
 
-<% include ./footer.html %>
+<% include ./layout/footer.html %>
