--- a/app/views/content/profile.html
+++ b/app/views/content/profile.html
@@ -6,14 +6,7 @@
 
 	<div class="sidepage">
 	<div class="well">
-		<h3 class="text-danger"><span class="fa fa-google-plus"></span> Google</h3>
-
-		<p>
-			<strong>id</strong>: <%= user.google.id %><br>
-			<strong>token</strong>: <%= user.google.token %><br>
-			<strong>email</strong>: <%= user.google.email %><br>
-			<strong>name</strong>: <%= user.google.name %>
-		</p>		
+		<h2>Welcome to CCAC Admin Page</h2>
 	</div>
 	</div>
 </div>
