--- a/app/views/content/sidebar.html
+++ b/app/views/content/sidebar.html
@@ -1,7 +1,7 @@
 <div class="sidebar">
 	<ul class="nav navbar-nav">
-		<li id="admin"><a href="/profile/admin">Admin</a></li>
-		<li id="sermons"><a href="/profile/sermons">Sermons</a></li>
+		<li id="users"><a href="/profile/users">Users</a></li>
 		<li id="pages"><a href="/profile/pages">Pages</a></li>
+		<li id="sermons"><a href="/profile/sermons">Sermons</a></li>
 	</ul>
 </div>
