--- a/app/views/main/layout/header.html
+++ b/app/views/main/layout/header.html
@@ -15,3 +15,8 @@
 
 	</head>
 	<body>
+		<nav class="navbar navbar-default navbar-fixed-top">
+			<div class="container">
+				<img class="header-logo left" src="/img/logo.png" height="80" />
+			</div>
+		</nav>
