--- a/app/views/content/users.html
+++ b/app/views/content/users.html
@@ -8,7 +8,7 @@
 <% include ./sidebar.html %>
 
 	<div class="sidepage">
-		<h2 class="well">Admin</h2>
+		<h2 class="well">Users</h2>
 		
 		<table class="table table-borderd table-hover">
 			<tr>
