--- a/app/views/content/pages.html
+++ b/app/views/content/pages.html
@@ -34,7 +34,10 @@
 					<span class="glyphicon glyphicon-trash" ng-click="deletePage(page)" ></span>
 				</td>
 				<td>{{page.path}}</td>
-				<td>{{page.google_calendar}}</td>
+				<td>
+					<span ng-if="page.google_calendar">Yes</span>
+					<span ng-if="!page.google_calendar">No</span>
+				</td>
 				<td><a href="https://docs.google.com/document/d/{{page.eng.doc_id}}/edit" class="glyphicon glyphicon-pencil" target="_blank" ng-if="pages_edit && page.eng.doc_id != '' && page.eng.doc_id != undefined">ENG</a></td>
 				<td><a href="https://docs.google.com/document/d/{{page.cht.doc_id}}/edit" class="glyphicon glyphicon-pencil" target="_blank" ng-if="pages_edit && page.cht.doc_id != '' && page.cht.doc_id != undefined">CHT</a></td>
 				<td><a href="https://docs.google.com/document/d/{{page.chs.doc_id}}/edit" class="glyphicon glyphicon-pencil" target="_blank" ng-if="pages_edit && page.chs.doc_id != '' && page.chs.doc_id != undefined">CHS</a></td>
