--- a/app/views/content/layout/header.html
+++ b/app/views/content/layout/header.html
@@ -17,6 +17,7 @@
 		<script src="/bower/bootstrap/dist/js/bootstrap.min.js"></script>
 		<script src="/bower/angular/angular.min.js"></script>
 		<script src="/bower/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+		<script src="/bower/aws-sdk-js/dist/aws-sdk.min.js"></script>
 		
 	</head>
 	<body>
