--- a/app/views/content/no_permission.html
+++ b/app/views/content/no_permission.html
@@ -5,7 +5,13 @@
 <% include ./sidebar.html %>
 
 	<div class="sidepage">
-		<h2>Sorry, you don't have permission to access this page</h2>
+		<div class="well">
+			<h2>Sorry, you don't have permission to access this page</h2>
+			
+			<hr>
+			
+			<h5>Please email <a href="mailto:admin@calgarychinesealliance.org">admin@calgarychinesealliance.org</a> for permission</h5>
+		</div>
 	</div>
 </div>
 
