--- a/app/views/main/index.html
+++ b/app/views/main/index.html
@@ -7,6 +7,10 @@
 		<p>Login or Register with:</p>
 
 		<a href="/auth/google" class="btn btn-danger"><span class="fa fa-google-plus"></span> Google</a>
+		
+		<hr>
+		
+		<h5>If you don't have a google account, you can still click on the "Google" button, then click "Create Account" to sign up a google account with your own email address or with a new gmail address.</h5>
 	</div>
 </div>
 
