--- a/app/views/content/pages.html
+++ b/app/views/content/pages.html
@@ -35,8 +35,7 @@
 				</td>
 				<td>{{page.path}}</td>
 				<td>
-					<span ng-if="page.google_calendar">Yes</span>
-					<span ng-if="!page.google_calendar">No</span>
+					<span class="glyphicon glyphicon-calendar" ng-if="page.google_calendar"></span>
 				</td>
 				<td><a href="https://docs.google.com/document/d/{{page.eng.doc_id}}/edit" class="glyphicon glyphicon-pencil" target="_blank" ng-if="pages_edit && page.eng.doc_id != '' && page.eng.doc_id != undefined">ENG</a></td>
 				<td><a href="https://docs.google.com/document/d/{{page.cht.doc_id}}/edit" class="glyphicon glyphicon-pencil" target="_blank" ng-if="pages_edit && page.cht.doc_id != '' && page.cht.doc_id != undefined">CHT</a></td>
