add sermon title edit

--- a/app/views/content/sermons.html
+++ b/app/views/content/sermons.html
@@ -34,6 +34,15 @@
 						</accordion-heading>
 						<div class="row">
 							<div class="col-md-4">
+								<span>Edit Title</span>
+							</div>
+							<div class="col-md-4">
+								<button class="btn btn-default glyphicon glyphicon-pencil" ng-click="editSermon(sermon)">Edit</button>
+							</div>
+						</div>
+						<hr />
+						<div class="row">
+							<div class="col-md-4">
 								<span>Remove All</span>
 							</div>
 							<div class="col-md-4">
