2015-01-15 update user view: invitation perms not show

--- a/app/views/content/users.html
+++ b/app/views/content/users.html
@@ -64,7 +64,7 @@
 						<td>{{ invitation.role }}</td>
 						<td>
 							<ul>
-								<li ng-repeat="perm in user.permissions">
+								<li ng-repeat="perm in invitation.permissions">
 									{{ perm }}
 								</li>
 							</ul>
