2016-03-11 setup new page to update calendar (in progress)

--- a/app/views/content/sidebar.html
+++ b/app/views/content/sidebar.html
@@ -2,6 +2,7 @@
 	<ul class="nav navbar-nav">
 		<li id="users"><a href="/profile/users">Users</a></li>
 		<li id="pages"><a href="/profile/pages">Pages</a></li>
+		<li id="calendars"><a href="/profile/calendars">Calendars</a></li>
 		<li id="sermons"><a href="/profile/sermons">Sermons</a></li>
 		<li id="uploads"><a href="/profile/uploads">Uploads</a></li>
 	</ul>
