--- a/app/views/content/sidebar.html
+++ b/app/views/content/sidebar.html
@@ -4,5 +4,6 @@
 		<li id="pages"><a href="/profile/pages">Pages</a></li>
 		<li id="sermons"><a href="/profile/sermons">Sermons</a></li>
 		<li id="uploads"><a href="/profile/uploads">Uploads</a></li>
+		<li id="feedbacks"><a href="/profile/feedbacks">Feedbacks</a></li>
 	</ul>
 </div>
